--- a/back-end/requirements.txt
+++ b/back-end/requirements.txt
@@ -1,43 +1,22 @@
-aiohttp==3.9.5
-aiosignal==1.3.1
-async-timeout==4.0.3
-attrs==23.2.0
-beautifulsoup4==4.12.3
-blinker==1.4
-certifi==2024.7.4
-charset-normalizer==3.3.2
-command-not-found==0.3
-cryptography==3.4.8
-dbus-python==1.2.18
-distro==1.7.0
-distro-info===1.1build1
-frozenlist==1.4.1
-httplib2==0.20.2
-idna==3.7
-importlib-metadata==4.6.4
-jeepney==0.7.1
-keyring==23.5.0
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-more-itertools==8.10.0
-multidict==6.0.5
-netifaces==0.11.0
-oauthlib==3.2.0
-PyGObject==3.42.1
-PyJWT==2.3.0
-pyparsing==2.4.7
-python-apt==2.4.0+ubuntu1
-PyYAML==5.4.1
+annotated-types==0.7.0
+anyio==4.8.0
+blinker==1.9.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+exceptiongroup==1.2.2
+fastapi==0.115.11
+h11==0.14.0
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+pydantic==2.10.6
+pydantic_core==2.27.2
 requests==2.32.3
-SecretStorage==3.3.1
-six==1.16.0
-soupsieve==2.5
-systemd-python==234
-ubuntu-advantage-tools==8001
-ufw==0.36.1
-unattended-upgrades==0.1
-urllib3==2.2.2
-wadllib==1.3.6
-yarl==1.9.4
-zipp==1.0.0
+sniffio==1.3.1
+starlette==0.46.0
+typing_extensions==4.12.2
+urllib3==2.3.0
+uvicorn==0.34.0
+Werkzeug==3.1.3
