--- a/balloon-mapping/package.json
+++ b/balloon-mapping/package.json
@@ -13,7 +13,9 @@
     "leaflet-polylinedecorator": "^1.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
+    "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
